cargo-features = ["strip"]

[package]
name = "wall-a-bunga"
version = "0.2.2-beta"
authors = ["Chew <chew@akarras.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallapi = { package = "wallhaven-api", path = "wallhaven-api"}
iced = {git = "https://github.com/iced-rs/iced.git", features = ["image", "tokio", "svg"]}
iced_futures = {git = "https://github.com/iced-rs/iced.git"}
iced_native = {git = "https://github.com/iced-rs/iced.git"}
futures = "0.3.17"
thiserror = "1.0.29"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.12.0", features = ["fs", "rt-multi-thread", "macros"] }
rand = "0.8.4"
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
native-dialog = "0.5.5"
platform-dirs = "0.3.0"
serde_json = "1.0.68"
num = "0.4.0"
itertools = "0.10.1"
bytes = "1.1.0"
indexmap = "1.7.0"
reqwest = {version = "0.11.4", features = ["json"]}
winapi = {version = "0.3.9", features = ["wincon", "winuser"]}
font-awesome-as-a-crate = "0.1.2"
image-rs = {package = "image", version = "0.23.14"}

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"