[package]
name = "wallhaven-api"
version = "0.2.0"
authors = ["Chew <chew@akarras.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = {version = "0.11", features = ["json"]}
thiserror = "1.0.22"
log = "0.4.11"
pretty_env_logger = "0.4.0"
native-dialog = "0.4.3"
serde_with = "1.6.0"

[dev-dependencies]
tokio = {version = "~0.2", features = ["rt-threaded", "macros"]}
